<resources>
    <string name="app_name">SquareMeals</string>
    <string name="filter_button">CUSTOM FILTERS</string>
    <string name="sign_in_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="main_layout">Main layout</string>
    <string name="sign_up_layout">Sign Up Layout</string>
    <string name="sign_up_layout2">Sign Up Layout</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="popup_background">Popup Background</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="retype">Confirm Password</string>
    <string name="name">Name</string>
    <string name="name_subtext">Other users will only be able to see your username.</string>
    <string name="guest">Guest</string>
    <string name="incorrect_info">Oops! Incorrect username or password</string>
    <string name="fill_all">Please fill in all of the following fields.</string>
    <string name="search_hint">Search recipes&#8230;</string>
    <string name="search_results">Search Results</string>
    <string name="profile">Profile</string>
    <string name="edit_preferences">Edit Preferences</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="slogan">Perfectly squared to your dietary needs!</string>
    <string name="Update_Changes">Update Changes</string>
    <string name="action_settings">Action Settings</string>
    <string name="mydiet">My Diet</string>
    <string name="back">Back</string>
    <string name="allgood">save</string>
    <string name="editdiet">Edit Diet Item</string>
    <string name="editprefpgtitle">New Item</string>
    <string-array name="list_view_items">
        <item>Kosher</item>
        <item>vegetarian</item>
        <item>low carb</item>
        <item>high protein</item>

    </string-array>

    <string name="title_activity_navigation_bar">NavigationBar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_chat_box">ChatBox</string>
    <color name="white">#FFFFFF</color>
    <!--<string name="app_name">ChatApp</string>-->
    <!--<string name="action_settings">Settings</string>-->
    <string name="send">Send</string>

</resources>
