<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomepageActivity">

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_search_category_default"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/action_settings"
        android:title="@string/profile"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_refresh"
        android:title="@string/edit_preferences"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item android:id="@+id/action_new"
        android:title="@string/settings"
        android:orderInCategory="300"
        app:showAsAction="never" />



</menu>
