<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="SquareMeals.com.squaremeals.SignUpActivity"
    android:visibility="visible"
    android:onClick="hideKeyboard">

    <!--
       This is the layout for the sign up page during the login process.
       It contains an ImageView for the app's logo, and multiple text fields for user input.
    -->

    <!--
         Logo
    -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/logo"
        android:adjustViewBounds="true"
        android:src="@drawable/leaf"
        android:scaleType="fitXY"
        android:focusable="true"
        android:cropToPadding="false"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"

        android:layout_marginTop="38dp"
        android:layout_centerHorizontal="true" />

    <!--
       Notice to fill in all fields
    -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fill_all"
        android:id="@+id/fill_all"
        android:textAlignment="center"
        android:visibility="visible"
        android:layout_above="@+id/real_name"
        android:layout_alignParentEnd="true" />

    <!--
        Name
   -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/real_name"
        android:hint="@string/name"
        android:layout_above="@+id/user_name"
        android:layout_alignStart="@+id/user_name" />

    <!--
        Username
   -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/user_name"
        android:hint="@string/username_hint"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/email"
        android:layout_alignStart="@+id/email" />

    <!--
        Email
   -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/password"
        android:layout_alignStart="@+id/password"    />

    <!--
        Password
   -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/password_hint"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/retype"
        android:layout_alignStart="@+id/retype" />

    <!--
        Confirm password
   -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/retype"
        android:hint="@string/retype"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true" />

    <!--
        Sign up button
   -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/button"
        android:singleLine="false"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="signUp"/>

</RelativeLayout>
