<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:weightSum="1"
    android:id="@+id/login"
    android:orientation="vertical"
    android:textAlignment="center"
    android:visibility="visible"
    android:background="@color/White">

    <!--
        This is the initial page for the login process.
        It contains the logo, the username and password text fields, and a login button.
    -->


    <!--
        Logo
    -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/logo"
        android:adjustViewBounds="true"
        android:src="@drawable/leaf"
        android:scaleType="fitCenter"
        android:focusable="true"
        android:cropToPadding="false"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="38dp"
        android:layout_centerHorizontal="true" />

    <!--
        Username
    -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/user_name"
        android:hint="@string/username_hint"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/incorrect"
        android:layout_centerHorizontal="true" />

    <!--
        Password
    -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/password_hint"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/user_name"
        android:layout_alignStart="@+id/user_name" />

    <!--
        Sign up button
    -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/sign_up_button"
        android:onClick="signUp"
        android:background="@color/Orange"
        android:layout_alignTop="@+id/log_in_button"
        android:layout_alignStart="@+id/password" />

    <!--
        Login button
    -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/log_in_button"
        android:singleLine="false"
        android:layout_gravity="center_horizontal|bottom|top"
        android:enabled="true"
        android:layout_marginTop="36dp"
        android:onClick="logIn"
        android:background="@color/Orange"
        android:layout_below="@+id/password"
        android:layout_alignEnd="@+id/password" />

    <!--
        Guest button
    -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest"
        android:id="@+id/guest_button"
        android:layout_marginTop="27dp"
        android:onClick="guestEnter"
        android:background="@color/Orange"
        android:layout_below="@+id/sign_up_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/incorrect_info"
        android:id="@+id/incorrect"
        android:textColor="#da0808"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/user_name"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />


</RelativeLayout>
