<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:onClick="hideKeyboard">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editdiet"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#83ea0c"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="45dp"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout2"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:id="@+id/pref_editText"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="388dp"
            android:layout_height="490dp"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/pref_button2"
                android:layout_marginEnd="62dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allgood"
                android:id="@+id/pref_button1"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="60dp" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>